[package]
name = "imgui-glium-renderer"
version = "0.13.0"
edition = "2021"
description = "Glium renderer for the imgui crate"
homepage = "https://github.com/imgui-rs/imgui-glium-renderer"
repository = "https://github.com/imgui-rs/imgui-glium-renderer"
documentation = "https://docs.rs/imgui-glium-renderer"
license = "MIT OR Apache-2.0"
categories = ["gui", "rendering"]

[dependencies]
glium = { version = "0.35.0", default-features = false }
imgui = { version = "0.12.0" }

[dev-dependencies]
glium = { version = "0.35.0", default-features = false, features = [
    "glutin_backend",
] }
imgui-winit-support = "0.13"
glutin = "0.32"
glutin-winit = "0.5.0"
winit = { version = "0.30", features = ["rwh_06"] }
raw-window-handle = "0.6.0"